--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
+<!--
+  name:张寅哲 group:17 Homework_1 
+  extra features:1,2,3,4,5 
+ -->
+
 <!DOCTYPE HTML SYSTEM>
 <html>
 
-<head>
-	<title>
-			Grandma's Lemon Meringue Pie
-	</title>
-	<link href="index.css" type="text/css" rel="stylesheet" media="screen" >
-	<link href="https://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" 
-		    type="image/gif" rel="shortcut icon" >	
+	<head>
+		<title>
+				Grandma's Lemon Meringue Pie
+		</title>
+		<link href="index.css" type="text/css" rel="stylesheet" media="screen" >
+		<link href="https://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" 
+			    type="image/gif" rel="shortcut icon" >	
+	</head>
 
-</head>
-
-<body>
-	<h1>Welcome</h1>
-	<a href="pie.html">--&gt;Grandma's Lemon Meringue Pie</a>
-</body>
+	<body>
+		<h1>
+			Welcome
+		</h1>
+		<a href="pie.html"><strong>--&gt;To Grandma's Lemon Meringue Pie</strong></a>
+	</body>
 
 </html>
